test-pods-yaml/nieuwe/apache-cert/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service-cert
spec:
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
